-
Bug
-
Resolution: Done
-
P1: Critical
-
5.2.0 RC1
-
None
-
dd97932a04c1ef27d0e4d73b701acc2aad411b07 (qtbase)
About the basic types, the HTML filename for bool is bool.html, but QDoc is outputting "qml-bool.html" in the QHP file, so it is not in the QCH file.
The same behaviour is seen with the other basic types.
qml-date.html is the wrong file name. It should be "date.html"
qml-date.html is more consistent, though.
- is required for
-
QTBUG-35145 Issues to be fixed before Qt5.2 final release
-
- Closed
-