qdoc: Fix output filenames for QML basic type documentation

qdoc intends to prepend all html files related to QML with
a 'qml-' prefix. This doesn't work for basic QML types, as
those nodes do not have valid qml module name information.

This change fixes the issue by removing the requirement
for a qml module name, thereby always using the qml
prefix for a qml (basic) type.

Task-number: QTBUG-35229
Change-Id: If61572b2dc8a39be08140c37aa59646b88e99b29
Reviewed-by: Martin Smith <martin.smith@digia.com>
Reviewed-by: Jerome Pasion <jerome.pasion@digia.com>

cregit: dd97932a04c1ef27d0e4d73b701acc2aad411b07 https://github.com/qt/qtbase/commit/dd97932a04c1ef27d0e4d73b701acc2aad411b07